--- a/connectors/bindings.http/package.json
+++ b/connectors/bindings.http/package.json
@@ -19,6 +19,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@toa.io/libraries.console": "0.2.0-dev.55",
     "agentkeepalive": "4.2.1",
     "express": "4.18.1",
     "node-fetch": "2.6.7"
