--- a/runtime/formation/package.json
+++ b/runtime/formation/package.json
@@ -22,10 +22,10 @@
   "peerDependencies": {
     "@toa.io/core": "*",
     "@toa.io/gears": "*",
-    "@toa.io/schema": "*",
-    "@toa.io/libraries.yaml": "*"
+    "@toa.io/schema": "*"
   },
   "dependencies": {
+    "@toa.io/libraries.yaml": "0.2.0-dev.55",
     "fast-glob": "3.2.7"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
