--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -19,9 +19,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
+    "@toa.io/core": "*",
     "@toa.io/formation": "*"
   },
   "dependencies": {
+    "@toa.io/libraries.schema": "*",
     "clone-deep": "4.0.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
