--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -18,20 +18,20 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "devDependencies": {
+    "@types/express": "4.17.13"
+  },
   "peerDependencies": {
     "@toa.io/bindings.amqp": "*",
-    "@toa.io/core": "*",
-    "@toa.io/libraries.generic": "*",
-    "@toa.io/schema": "*"
+    "@toa.io/core": "*"
   },
   "dependencies": {
+    "@toa.io/libraries.generic": "0.2.0-dev.55",
     "@toa.io/libraries.console": "0.2.0-dev.55",
+    "@toa.io/libraries.schema": "0.2.0-dev.55",
     "cors": "2.8.5",
     "express": "4.18.1",
     "path-to-regexp": "6.2.0"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.13"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
