--- a/connectors/bindings.http/package.json
+++ b/connectors/bindings.http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bindings.http",
-  "version": "0.2.0-dev.55",
+  "version": "0.2.0-dev.57",
   "description": "Toa HTTP Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -18,14 +18,14 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "peerDependencies": {
+    "@toa.io/core": "*"
+  },
   "dependencies": {
-    "@toa.io/libraries.console": "0.2.0-dev.55",
+    "@toa.io/libraries.console": "0.2.0-dev.57",
     "agentkeepalive": "4.2.1",
     "express": "4.18.1",
     "node-fetch": "2.6.7"
-  },
-  "devDependencies": {
-    "@babel/parser": "^7.16.2"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
