--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@toa.io/libraries.console": "0.2.0-dev.57",
     "@toa.io/libraries.generic": "0.2.0-dev.57",
-    "@toa.io/libraries.schema": "0.2.0-dev.57",
+    "@toa.io/libraries.annotations": "0.2.0-dev.57",
     "mongodb": "4.1.4"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
