--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -25,5 +25,8 @@
     "@toa.io/libraries.generic": "0.2.0-dev.57",
     "@toa.io/libraries.schema": "0.2.0-dev.57",
     "node-fetch": "2.6.7"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "2.6.2"
   }
 }
