--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -2,18 +2,22 @@ name: dummies
 description: Integration tests dummies context
 version: 0.0.0
 packages: '*'
+
 runtime:
   registry: http://host.docker.internal:4873
   proxy: http://host.docker.internal:4873
+
 registry:
   base: 153896708942.dkr.ecr.eu-west-1.amazonaws.com
   base@dev: localhost:5000
   platforms@dev: ~
+
 compositions:
   - name: messages
     components:
       - messages.messages
       - stats.stats
+
 exposition:
   host: dummies.toa.dev
   host@staging: dummies.stage.toa.dev
@@ -27,6 +31,8 @@ exposition:
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
   annotations@dev: ~
-mongodb: is-not-defined
+
+mongodb: is-not-defined # this is not deployable, value must present to pass validation
 mongodb@dev: host.docker.internal
+
 amqp@dev: host.docker.internal
