feat(configuration): add component configuration

--- a/extensions/configuration/package.json
+++ b/extensions/configuration/package.json
@@ -15,7 +15,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+  "peerDependencies": {
+    "@toa.io/core": "*",
+    "@toa.io/libraries": "*"
   }
 }
