refactor(configuration): add provider

--- a/extensions/configuration/package.json
+++ b/extensions/configuration/package.json
@@ -18,5 +18,8 @@
   "peerDependencies": {
     "@toa.io/core": "*",
     "@toa.io/libraries": "*"
+  },
+  "dependencies": {
+    "clone-deep": "4.0.1"
   }
 }
