--- a/libraries/package.json
+++ b/libraries/package.json
@@ -29,6 +29,7 @@
     "ajv": "8.6.3",
     "ajv-formats": "2.1.1",
     "chalk": "4.1.2",
+    "clone-deep": "4.0.1",
     "js-yaml": "4.1.0",
     "uuid": "8.3.2"
   }
