--- a/package.json
+++ b/package.json
@@ -50,19 +50,22 @@
     "test:integration": "npx jest --roots integration --runInBand",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
+    "npm:login:local": "npm adduser --registry http://localhost:4873",
     "publish:local": "npx --yes lerna version --conventional-prerelease --preid dev --force-publish --no-git-tag-version --no-push --no-changelog --yes && npm publish --workspaces",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "registry:login": "aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 153896708942.dkr.ecr.eu-west-1.amazonaws.com",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
-    "connect": "telepresence quit && telepresence connect && telepresence intercept -l dev",
-    "env": "docker compose up -d && npm run cluster && npm adduser --registry http://localhost:4873"
+    "connect": "telepresence quit && telepresence connect && telepresence intercept -l dev"
   },
   "standard": {
     "parser": "@babel/eslint-parser",
     "env": {
       "jest": true
-    }
+    },
+    "globals": [
+      "AbortController"
+    ]
   },
   "jest": {
     "roots": [
