--- a/libraries/schema/src/definitions.yaml
+++ b/libraries/schema/src/definitions.yaml
@@ -12,7 +12,7 @@ definitions:
     pattern: ^[a-fA-F0-9]{32}$
   endpoint:
     type: string
-    pattern: ^([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?)(\.([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?)){1,}$
+    pattern: ^([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?)(\.([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?)){2}$
   locator:
     type: string
     pattern: ^([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?)(\.([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?))$
