chore(integration): add context.remote and context.configuration tests

--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -38,5 +38,5 @@ mongodb@dev: host.docker.internal
 amqp@dev: host.docker.internal
 
 configuration:
-  stats.stats:
-    foo: 2
+  messages.messages:
+    price: 2
