--- a/libraries/package.json
+++ b/libraries/package.json
@@ -30,6 +30,7 @@
     "ajv-formats": "2.1.1",
     "chalk": "4.1.2",
     "clone-deep": "4.0.1",
+    "fast-glob": "3.2.11",
     "js-yaml": "4.1.0",
     "uuid": "8.3.2"
   }
