--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@babel/eslint-parser": "7.17.0",
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
+    "@cucumber/cucumber": "8.3.1",
+    "@types/node": "18.0.0",
     "clone-deep": "4.0.1",
     "execa": "5.1.1",
     "husky": "7.0.4",
@@ -48,6 +50,8 @@
     "test:lint": "npx standard --verbose | npx snazzy",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries",
     "test:integration": "npx jest --roots integration --runInBand",
+    "test:features": "npx cucumber-js",
+    "test:all": "npm run test && npm run test:integration && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
     "npm:login:local": "npm adduser --registry http://localhost:4873",
