chore: bump version

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
     "npm:login:local": "npm adduser --registry http://localhost:4873",
-    "publish:local": "npx --yes lerna version --conventional-prerelease --preid dev --force-publish --no-git-tag-version --no-push --no-changelog --yes && npm publish --workspaces",
+    "version:dev": "npx --yes lerna version --conventional-prerelease --preid dev --force-publish --no-git-tag-version --no-push --no-changelog --yes",
+    "publish:local": "npm publish --workspaces",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "registry:login": "aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 153896708942.dkr.ecr.eu-west-1.amazonaws.com",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
