--- a/libraries/package.json
+++ b/libraries/package.json
@@ -22,6 +22,9 @@
     "access": "public"
   },
   "main": "package.json",
+  "peerDependencies": {
+    "@toa.io/core": "*"
+  },
   "devDependencies": {
     "@types/js-yaml": "4.0.5"
   },
