--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,15 @@ services:
     environment:
       # Only connections from localhost are allowed without credentials.
       # Kind deployment is using this service as external broker which is not a local connection.
-      RABBITMQ_DEFAULT_USER: user
-      RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_DEFAULT_USER: developer
+      RABBITMQ_DEFAULT_PASS: secret
   mongodb:
     image: mongo:5.0.8
     ports:
       - '27017:27017'
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: developer
+      MONGO_INITDB_ROOT_PASSWORD: secret
   verdaccio:
     image: verdaccio/verdaccio:5.10.2
     ports:
