feat: add external brokers
Close #158, close #166

--- a/operations/src/deployment/chart/templates/compositions.yaml
+++ b/operations/src/deployment/chart/templates/compositions.yaml
@@ -28,7 +28,7 @@ spec:
                     {{- if eq $component $key }}
                       {{- range $vars }}
             - name: {{ .name }}
-              value: {{ .value }}
+              value: {{ .value | quote }}
                       {{- end }}
                     {{- end }}
                   {{- end }}
