--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/boot",
-  "version": "0.2.0-dev.71",
+  "version": "0.2.0-dev.72",
   "description": "Toa Boot",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,8 +20,8 @@
   },
   "peerDependencies": {
     "@toa.io/core": "*",
-    "@toa.io/norm": "*",
-    "@toa.io/libraries": "*"
+    "@toa.io/libraries": "*",
+    "@toa.io/norm": "*"
   },
   "dependencies": {
     "clone-deep": "4.0.1"
