feat(deployment): add system environment variables

--- a/operations/src/deployment/chart/templates/compositions.yaml
+++ b/operations/src/deployment/chart/templates/compositions.yaml
@@ -42,6 +42,19 @@ spec:
                     {{- end }}
                   {{- end }}
                 {{- end }}
+                {{- range $.Values.variables.system }}
+            - name: {{ .name }}
+                {{- if .value }}
+              value: {{ .value | quote }}
+                {{- end }}
+                {{- if .secret }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .secret.name }}
+                  key: {{ .secret.key }}
+                  optional: false
+                {{- end }}
+                {{- end }}
               {{- end }}
 ---
 {{- end }}
