--- a/operations/src/deployment/chart/templates/services.yaml
+++ b/operations/src/deployment/chart/templates/services.yaml
@@ -16,6 +16,12 @@ spec:
       containers:
         - name: {{ .name }}
           image: {{ .image }}
+          {{- if $.Values.variables }}
+          env:
+            {{- range $.Values.variables.system }}
+            {{- include "env.var" . | indent 12 }}
+            {{- end }}
+          {{- end }}
 ---
 apiVersion: v1
 kind: Service
