refactor(deployment): rename system variables to global variables

--- a/operations/src/deployment/chart/templates/compositions.yaml
+++ b/operations/src/deployment/chart/templates/compositions.yaml
@@ -30,7 +30,7 @@ spec:
                 {{- end }}
               {{- end }}
             {{- end }}
-            {{- range $.Values.variables.system }}
+            {{- range $.Values.variables.global }}
             {{- include "env.var" . | indent 12 }}
             {{- end }}
           {{- end }}
