--- a/connectors/bindings.amqp/package.json
+++ b/connectors/bindings.amqp/package.json
@@ -26,5 +26,8 @@
     "amqplib": "0.8.0",
     "execa": "5.1.1"
   },
-  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
+  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24",
+  "devDependencies": {
+    "@types/amqplib": "0.8.2"
+  }
 }
