--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "execa": "5.1.1",
     "husky": "7.0.4",
     "jest": "27.3.1",
+    "knex": "2.1.0",
     "node-fetch": "2.6.7",
     "randomstring": "1.2.1",
     "snazzy": "9.0.0",
