--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@commitlint/config-conventional": "14.1.0",
     "@cucumber/cucumber": "8.3.1",
     "@types/node": "18.0.0",
+    "amqplib": "0.10.0",
     "clone-deep": "4.0.1",
     "execa": "5.1.1",
     "husky": "7.0.4",
