--- a/features/steps/.workspace/components/collection/external.consumer/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/external.consumer/manifest.toa.yaml
@@ -11,8 +11,8 @@ operations:
   transit:
     concurrency: none
     input:
-      time: ~
-      description: ~
+      time: .
+      description: .
     query: false
 
 receivers:
