--- a/features/steps/.workspace/components/collection/exposed.one/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/exposed.one/manifest.toa.yaml
@@ -13,8 +13,8 @@ operations:
   transit:
     concurrency: retry
     input:
-      foo: ~
-      bar: ~
+      foo: .
+      bar: .
 
 exposition:
   /: [transit]
