--- a/integration/dummies/b/manifest.toa.yaml
+++ b/integration/dummies/b/manifest.toa.yaml
@@ -7,6 +7,7 @@ entity:
   schema:
     properties:
       length:
+        type: integer
         maximum: 10
       description: string
     required: [length]
