--- a/integration/dummies/nulls/manifest.toa.yaml
+++ b/integration/dummies/nulls/manifest.toa.yaml
@@ -13,8 +13,8 @@ operations:
   transit:
     concurrency: retry
     input:
-      foo: ~
-      bar: ~
+      foo: .
+      bar: .
 
 exposition:
   /: [transit]
