--- a/libraries/schema/src/definitions.yaml
+++ b/libraries/schema/src/definitions.yaml
@@ -10,6 +10,7 @@ definitions:
   id:
     type: string
     pattern: ^[a-fA-F0-9]{32}$
+    system: true
   label:
     type: string
     pattern: ^([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?)(-([a-zA-Z]+([_a-zA-Z0-9]*[a-zA-Z0-9]+)?))*$
