--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features",
     "test:integration": "npx jest --roots integration --runInBand",
     "test:features": "npx cucumber-js",
-    "test:features:schema": "npx cucumber-js -p schema",
-    "test:features:unit": "npm run test:features:schema",
+    "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm",
     "test:all": "npm run test && npm run test:integration && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
