feat(schema)!: set additionalProperties false by default

--- a/integration/dummies/messages/manifest.toa.yaml
+++ b/integration/dummies/messages/manifest.toa.yaml
@@ -28,6 +28,7 @@ operations:
     output:
       properties:
         id: .
+        sender: .
         text: .
         timestamp: .
       required: [id, text]
@@ -51,6 +52,7 @@ operations:
       required: [sender, text]
     output:
       properties:
+        id: .
         ok: string
       required: [id, ok]
   assign:
