feat(sampling): add initial implementation

--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -32,6 +32,7 @@
     "@toa.io/extensions.configuration": "0.2.0-dev.104",
     "@toa.io/extensions.exposition": "0.2.0-dev.104",
     "@toa.io/extensions.origins": "0.2.0-dev.104",
+    "@toa.io/extensions.sampling": "0.2.0-dev.104",
     "@toa.io/libraries": "0.2.0-dev.104",
     "@toa.io/norm": "0.2.0-dev.104",
     "@toa.io/operations": "0.2.0-dev.104",
