--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/runtime",
-  "version": "0.2.0-dev.104",
+  "version": "0.2.0-dev.103",
   "description": "Toa Runtime",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -39,7 +39,8 @@
     "@toa.io/prototype": "0.2.0-dev.104",
     "@toa.io/storages.mongodb": "0.2.0-dev.104",
     "@toa.io/storages.null": "0.2.0-dev.104",
-    "@toa.io/storages.sql": "0.2.0-dev.104"
+    "@toa.io/storages.sql": "0.2.0-dev.104",
+    "@toa.io/userland": "0.2.0-dev.104"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
