feat(userland): add samples

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@babel/eslint-parser": "7.17.0",
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
-    "@cucumber/cucumber": "8.3.1",
+    "@cucumber/cucumber": "8.5.2",
     "@types/node": "18.0.0",
     "amqplib": "0.10.0",
     "clone-deep": "4.0.1",
@@ -54,7 +54,7 @@
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:integration": "npx jest --roots integration --runInBand",
     "test:features": "npx cucumber-js",
-    "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm",
+    "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm && npx cucumber-js -p samples",
     "test:all": "npm run test && npm run test:integration && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
