--- a/userland/example/components/math/calculations/samples/sum.yaml
+++ b/userland/example/components/math/calculations/samples/sum.yaml
@@ -1,10 +1,10 @@
-title: Should sum numbers
+title: Should add numbers
 input:
   a: 1
   b: 2
 output: 3
 ---
-title: Should sum negative numbers
+title: Should add negative numbers
 input:
   a: -1
   b: -2
