feat(sampling): add sampling context

--- a/extensions/sampling/src/sample.cos.yaml
+++ b/extensions/sampling/src/sample.cos.yaml
@@ -1,9 +1,9 @@
 reply: &reply
-  output: null
-  error: null
+  output: ~
+  error: ~
 context:
   local: &call
     ~:
-      input: null
+      input: ~
       reply: *reply
   remote: *call
