feat(samples): add remote call samples

--- a/userland/samples/src/.suite/sample.cos.yaml
+++ b/userland/samples/src/.suite/sample.cos.yaml
@@ -1,8 +1,9 @@
 title: string
 context:
-  local:
+  local: &calls
     ~[]:
       input: ~
       output: ~
+  remote: *calls
 input: ~
 output*: ~
