--- a/userland/example/components/tea/pots/samples/transit.yaml
+++ b/userland/example/components/tea/pots/samples/transit.yaml
@@ -15,3 +15,11 @@ current:
 next:
   material: steel
   volume: 1.5
+---
+title: Should observe pot
+current:
+  material: steel
+  volume: 1.5
+output:
+  material: steel
+  volume: 1.5
