refactor(samples): move context interactions on top level

--- a/userland/samples/src/.suite/sample.cos.yaml
+++ b/userland/samples/src/.suite/sample.cos.yaml
@@ -1,9 +1,10 @@
 title: string
-context:
-  local: &calls
-    ~[]:
-      input: ~
-      output: ~
-  remote: *calls
 input: ~
-output*: ~
+output: ~
+local: &calls
+  ~+:
+    input: ~
+    output: ~
+remote: *calls
+current+: object
+next: object
