--- a/runtime/prototype/manifest.toa.yaml
+++ b/runtime/prototype/manifest.toa.yaml
@@ -3,7 +3,9 @@ prototype: null
 entity:
   schema:
     properties:
-      id: id
+      id:
+        $ref: 'https://schemas.toa.io/0.0.0/definitions#/definitions/id'
+        system: true
       _version:
         type: integer
         default: 0
