feat(sampling): add annex samples

--- a/extensions/sampling/src/sample.cos.yaml
+++ b/extensions/sampling/src/sample.cos.yaml
@@ -12,3 +12,8 @@ context:
 storage:
   current+: object
   next: object
+extensions:
+  ~:
+    - arguments: [~]
+      result: ~
+      permanent: boolean
