--- a/userland/samples/src/.suite/sample.cos.yaml
+++ b/userland/samples/src/.suite/sample.cos.yaml
@@ -8,3 +8,8 @@ local: &calls
 remote: *calls
 current+: object
 next: object
+extensions:
+  ~:
+    - arguments: [~]
+      result: ~
+      permanent: boolean
