fix(userland): fix beacon sample

--- a/userland/example/components/echo/beacon/samples/signal.yaml
+++ b/userland/example/components/echo/beacon/samples/signal.yaml
@@ -3,7 +3,5 @@ output: quack
 ---
 title: Should substitute configuration
 output: woof
-extensions:
-  configuration:
-    - arguments: [[signal]]
-      output: woof
+configuration:
+  signal: woof
