feat(samples): add request.query samples

--- a/userland/example/components/tea/pots/manifest.toa.yaml
+++ b/userland/example/components/tea/pots/manifest.toa.yaml
@@ -13,8 +13,9 @@ operations:
     input:
       material*: .
       volume: .
-  extend:
-    concurrency: none
+  same:
+    input: .material
+    output: array
 
 configuration:
   step: 0.5
