--- a/userland/samples/src/.suite/sample.cos.yaml
+++ b/userland/samples/src/.suite/sample.cos.yaml
@@ -4,6 +4,11 @@ output: ~
 local: &calls
   ~+:
     input: ~
+    query:
+      id: string
+      criteria: string
+      omit: number
+      limit: number
     output: ~
 remote: *calls
 current+: object
