--- a/userland/example/components/tea/pots/samples/transit.yaml
+++ b/userland/example/components/tea/pots/samples/transit.yaml
@@ -1,4 +1,4 @@
-title: Should create pot
+title: Should create
 input:
   material: glass
   volume: 1.5
@@ -6,7 +6,7 @@ next:
   material: glass
   volume: 1.5
 ---
-title: Should update pot
+title: Should update
 input:
   material: steel
 current:
