--- a/libraries/package.json
+++ b/libraries/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/libraries",
-  "version": "0.2.0-dev.106",
+  "version": "0.2.0-dev.107",
   "description": "Toa Libraries",
   "homepage": "https://toa.io",
   "author": {
@@ -23,7 +23,8 @@
   },
   "main": "package.json",
   "peerDependencies": {
-    "@toa.io/core": "*"
+    "@toa.io/core": "*",
+    "@toa.io/runtime": "*"
   },
   "devDependencies": {
     "@types/js-yaml": "4.0.5"
