--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
     "@cucumber/cucumber": "8.5.2",
+    "@types/jest": "28.1.1",
     "@types/node": "18.0.0",
     "amqplib": "0.10.0",
     "clone-deep": "4.0.1",
