--- a/userland/example/components/tea/pots/samples/transit.yaml
+++ b/userland/example/components/tea/pots/samples/transit.yaml
@@ -15,3 +15,13 @@ current:
 next:
   material: steel
   volume: 1.5
+---
+title: Should emit event
+input:
+  material: glass
+  volume: 1.5
+events:
+  created:
+    material: glass
+    volume: 1.5
+    _version: 1
