feat(samples): add `toa replay` for multiple components

--- a/features/steps/.workspace/components/collection/math.calculations/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/math.calculations/manifest.toa.yaml
@@ -9,3 +9,8 @@ operations:
       a: number
       b: number
     output: number
+  multi:
+    input:
+      a: number
+      b: number
+    output: number
