refactor(sampling): add `payload` to event message type

--- a/userland/example/components/tea/pots/samples/messages/store.orders.created.yaml
+++ b/userland/example/components/tea/pots/samples/messages/store.orders.created.yaml
@@ -6,7 +6,7 @@ input:
 query:
   id: 1
 ---
-title: Should book a pot (without request)
+title: Should book a pot (without performing request)
 component: tea.pots
 payload:
   pot: 1
