feat(stage): add binding

--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -5,6 +5,7 @@
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
